app/styles/main.scss
$icon-font-path: '../fonts/';

// bower:scss
@import "bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

@import url(https://fonts.googleapis.com/css?family=Roboto);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);

$font-size: 16px;
$primary-font: 'Source Sans Pro';
$alt-font: 'Roboto';

$link-color: desaturate(#AFE9CC,10);

// ===========================
// Global Styles
// ===========================
html {
  font-size: $font-size;
}

body {
  margin-top: 50px;
  margin-bottom: 0;
  font-family: $primary-font;
  background-color: #AFE9CC;
  .alt-font {
    font-family: $alt-font;
  }

}

a {
  transition: all 0.2s ease;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 0;
    margin-bottom: 0;
}


h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3rem;
  margin: 0;
}

h3 {
  font-size: 2rem;
}

p {
  font-size: 1rem;
}

// ===========================
// Nav Styles
// ===========================
.brand {
  font-size: 1.9rem;
}

.nav-main {
  background: radial-gradient(#f8f8f8, #eee);
}

.nav-links {
  font-size: 1.7rem;
  text-shadow: 1px 1px 1px #ccc;
  i {
    font-size: 1.8rem;
    margin-top: -.2rem;
    padding: 0;
  }
}

.social-icon {
  display: inline-block;
}

// ===========================
// Page Styles
// ===========================
.page {
  min-height: 52rem;
}
.page-title {
  padding-top: 5rem;
}
#Home {
  padding: 10rem;
  background-color: desaturate(#aec, 10);
}

.home-text {
    font-size: 8rem;
    color: rgba(50,100,170, 0.8);
    text-shadow: 2px 3px 5px desaturate(#aec, 10), 0 0 0 #000, 2px 3px 5px desaturate(#aec, 10);
  }

#Projects {
  background-color: desaturate(#2be, 25);

  .project-cells {
    margin: 8rem auto 0 auto;
    height: 16rem;
    width: 80%;
  }

}

.project-card {
  a,
  a:active,
  a:visited {
    color: inherit;
    border-bottom: 1px solid $link-color;
    box-shadow: inset 0 -2px 0 $link-color;
    text-decoration: none;
  }

    a:hover {
      box-shadow: inset 0 -30px 0 $link-color;
    }
}

.project-link:hover {
    transition: all 0.2s ease;
    box-shadow: 2px 8px 25px #222;


}

//#Blog {
  //background-color: desaturate(#c44,10);
//}

#About {
  background-color: desaturate(#FF9,20);

  .about-inner {
    margin: 5rem auto 0 auto;
    width: 80%;
  }
}

#Contact {
  background-color: desaturate(#aec, 10);
  .big-text {
    font-size: 30rem;
  }

  a {
    text-decoration: none;
  }

  .email {
    font-size: 30rem;
  }
}

// ===========================
// MOBILE
// ===========================
@media (max-width: 650px) {

 .home-text {
    font-size: 3rem;
  }

  .social-icon {
    display: none;
  }

  .navbar-header {
    display: none;
  }

  .mobile-hook {
    text-align: center;
  }

  .mobile-hook li {
     display: inline-block;
     font-size: 1rem;
  }

  .home {
    min-height: 20rem;
  }

  #Home {
  padding: 10rem 0rem 10rem 0rem;
  }

  .projects {
    min-height: 100rem;
  }

  .email {
    font-size: 8rem !important;
  }

  .contact {
    max-height: 60rem;
  }
}
// ===========================
// Tablets
// ===========================
@media (min-width: 651px) and (max-width: 980px) {

    .social-icon li i {
    //display: none;
    font-size: 1rem;
  }

  .navbar-header {
    //display: none;
  }

  .brand {
    font-size: 1.4rem;
  }

    .mobile-hook {
    text-align: center;
  }

  .mobile-hook li {
     display: inline-block;
     font-size: 1rem;
  }

  .mobile-hook .social-icon li {
     display: inline-block;
     font-size: 1rem;
  }

  .home-text {
    font-size: 4.1rem;
  }

  .projects {
    min-height: 106rem;
  }

  .project-card p {
    padding: 0 10rem 0 10rem;
    margin-bottom: 4rem;
  }


}

// ==========================
// Removes brand header in this range
// to fix a layout bug in the nav
// bar.
// ==========================
@media (min-width: 651px) and (max-width: 770px) {
    .navbar-header {
    display: none;
  }
}

